Rebuild the layout as full desktop NiDA, and build the APK with the IME
The previous change fixed two keys by hand and guessed at where the displaced
ASCII should go. Comparing the shipped layout against the real NiDA tables
showed that was both incomplete and partly wrong:

  - `,` types SARA OM on the BASE layer, not shift. The earlier fix put the
    vowel on shift and left an ASCII comma on base.
  - Three more positions are two-code-point sequences that were never
    addressed: Shift+V, Shift+; and Shift+, .
  - Shift+3 typed `#`; NiDA types `"`. NiDA's own right-alt layer carries the
    displaced ASCII (`+` on RAlt+A, `:` on RAlt+G, `,` on RAlt+COMMA, and
    others), rather than the ad-hoc slots invented before.
  - 104 right-alt and shift+right-alt positions were simply missing.

The layout is now generated rather than hand-edited: tools/parse_kmn.py reads
the key/output stores of SIL's NiDA-based Khmer Angkor keyboard into
tools/nida_layout.json, and tools/gen_kcm.py emits the .kcm from it. 181 of 186
NiDA positions now match exactly; the other five are the sequence keys, which
carry their leading code point.

The input method now covers all five sequences. Each rule fires only when the
key already produces the sequence's leading code point, so it is inert under a
Latin layout - necessary because one of the five is the unshifted comma.

dl.google.com is blocked here, but Ubuntu packages aapt, dx, zipalign and
apksigner, and ships a framework-res.apk and an android.jar. tools/build_apk.sh
uses those to build and sign the whole app, input method included.

Verified on the built APK: v1+v2+v3 signatures valid, same certificate as the
previous build so it installs as an update, receiver and input-method service
both registered with their meta-data resolving, embedded .kcm byte-identical to
the repo source, and 181 exact NiDA positions read back out of the APK.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/sessio