@@ -1,113 +1,114 @@
 # Khmer Unicode Layout for External Keyboard
 
-A physical-keyboard layout (NiDA) for Android. The system reads
-`app/src/main/res/raw/keyboard_layout_khmer.kcm` and the layout appears under
+The Khmer **NiDA** layout for a physical keyboard on Android, matching the
+desktop (Windows KBDKNI / NiDA) keyboard. Android reads
+`app/src/main/res/raw/keyboard_layout_khmer.kcm`; the layout is chosen under
 **Settings → System → Languages & input → Physical keyboard**.
 
 This repository was reconstructed from the shipped APK
-(`net.socheat.apps.khmerunicodelayoutforexternalkeyboard`), which contained no
-source.
+(`net.socheat.apps.khmerunicodelayoutforexternalkeyboard`), which had no source.
 
-## What was fixed
+## The layout
 
-Two keys did not match the NiDA layout:
+Every base, shift, right-alt and shift+right-alt position of the desktop NiDA
+keyboard is reproduced: **181 of 186 positions exactly**, and the remaining five
+as far as the format allows (below).
 
-| Key | Was | NiDA wants |
-|-----|-----|------------|
-| `Shift+A` | `+` (PLUS SIGN) | `ាំ` — U+17B6 U+17C6 |
-| `Shift+,` | `;` (SEMICOLON) | `ុំ` — U+17BB U+17C6 |
+The table is not hand-written. `tools/parse_kmn.py` reads the key/output stores
+of SIL's NiDA-based *Khmer Angkor* keyboard into `tools/nida_layout.json`, and
+`tools/gen_kcm.py` generates the `.kcm` from it, so the layout can be
+regenerated and re-checked rather than trusted:
 
-Both targets are **two code points**, and that is the catch described below.
-The ASCII characters that occupied those slots were not dropped, just moved:
+```
+python3 tools/parse_kmn.py     # refresh tools/nida_layout.json from the source keyboard
+python3 tools/gen_kcm.py       # regenerate the .kcm (deterministic)
+```
 
-* `+` → `Shift+RightAlt+A`
-* `;` → `RightAlt+,` (which previously just repeated `,`, already on the base layer)
+## The five keys a .kcm cannot type
 
-Every other key in the layout was audited: all 49 key blocks parse, and every
-code point is assigned in Unicode. Nothing else changed.
+NiDA puts two-code-point vowel *sequences* on five positions:
 
-## The catch: a .kcm key cannot type two code points
+| Key | Types | Code points |
+|-----|-------|-------------|
+| `,` | `ុំ` | U+17BB U+17C6 |
+| `Shift+,` | `ុះ` | U+17BB U+17C7 |
+| `Shift+A` | `ាំ` | U+17B6 U+17C6 |
+| `Shift+V` | `េះ` | U+17C1 U+17C7 |
+| `Shift+;` | `ោះ` | U+17C4 U+17C7 |
 
 An Android key character map behavior holds exactly one UTF-16 code unit. In
-AOSP's `frameworks/native/libs/input/KeyCharacterMap.cpp`:
+AOSP's `frameworks/native/libs/input/KeyCharacterMap.cpp`,
+`Parser::parseCharacterLiteral` reads **one** character and then requires the
+closing quote, and `Parser::parseKeyProperty` rejects a second literal with
+*"Cannot combine multiple character literals"*. The public API agrees:
+`KeyCharacterMap.get(int, int)` returns a single `int` code point.
 
-* `Parser::parseCharacterLiteral` reads **one** character (or one `\uXXXX`
-  escape) and then requires the closing quote;
-* `Parser::parseKeyProperty` rejects a second literal outright —
-  *"Cannot combine multiple character literals"*.
+So `shift: 'ាំ'` is not merely unsupported — it is a **parse error**,
+and one bad key block makes Android discard the whole file and fall back to
+`Generic.kcm`: the keyboard silently becomes US Latin with no error anywhere.
+Unicode has no precomposed character for any of the five.
 
-The public API agrees: `KeyCharacterMap.get(int keyCode, int metaState)`
-returns a single `int` code point.
+**In the layout file** those five positions carry the *first* code point of the
+sequence, so `Shift+M` (U+17C6 NIKAHIT) or `Shift+H` (U+17C7 REAHMUK) completes
+the cluster in a second keystroke.
 
-So `shift: 'ាំ'` is not "unsupported but harmless" — it is a **parse
-error**, and one bad key block makes Android discard the entire file and fall
-back to `Generic.kcm`. The keyboard silently becomes a US Latin keyboard with
-no error message anywhere. Unicode has no precomposed character for either
-sequence, so there is no single code point to use instead.
+**For the desktop's single keystroke**, enable *Khmer Unicode sequence keys*
+under **Settings → System → Languages & input → On-screen keyboard**.
+`KhmerSequenceInputMethodService` intercepts exactly those five combinations and
+commits the full sequence; every other key falls straight through to the `.kcm`.
 
-### How this repo handles it
-
-**In the layout file** (works with no extra setup): the shift layer carries the
-*first* code point of each sequence, matching what NiDA starts the cluster
-with. Press `Shift+M` (U+17C6 NIKAHIT) to complete it:
-
-* `Shift+A`, `Shift+M` → `ាំ`
-* `Shift+,`, `Shift+M` → `ុំ`
-
-**Optionally, in one keystroke**: enable *Khmer Unicode sequence keys* under
-**Settings → System → Languages & input → On-screen keyboard**. That service
-(`KhmerSequenceInputMethodService`) intercepts only those two combinations and
-commits the full sequence; every other key falls straight through to the `.kcm`
-above, which stays the single source of truth for the rest of the keyboard.
-
-It draws no on-screen keyboard, so select it only on a device that has a
-physical keyboard attached — otherwise you lose the soft keyboard. If you never
-enable it, the app behaves exactly as it did before, plus the layout fixes.
+Each of its rules fires only when the key currently produces the sequence's
+leading code point — which is true exactly when the Khmer layout is active. That
+matters because one of the five is the *unshifted* comma: without the check,
+switching the physical keyboard to a Latin layout would turn every comma into a
+Khmer vowel. It draws no on-screen keyboard, so select it only on a device with
+a physical keyboard attached.
 
 ## Verifying the layout
 
 `tools/validate_kcm.py` ports the platform parser's accept/reject rules, so a
-layout that Android would silently discard fails the build instead:
+layout Android would silently discard fails the build instead:
 
 ```
 python3 tools/validate_kcm.py app/src/main/res/raw/keyboard_layout_khmer.kcm
 python3 tools/validate_kcm.py app/src/main/res/raw/keyboard_layout_khmer.kcm --dump
 ```
 
-`--dump` prints every mapping with its code point and Unicode name, which is the
-quickest way to eyeball the layout. The check also runs automatically before
-every build via the `validateKcm` Gradle task.
+`--dump` prints every mapping with its code point and Unicode name. The check
+also runs before every build, from both build paths below.
 
 ## Building
+
+With Android Studio / the Google SDK:
 
 ```
 ./gradlew assembleDebug
 ```
 
-Requires the Android SDK (compileSdk 34, minSdk 21) and `python3` on `PATH` for
-the layout check. This is the build that produces the full app, the optional
-input method included.
+Without it — the full app, input method included, from Ubuntu packages only:
 
-### Patching the layout into an existing APK, without the SDK
+```
+sudo apt-get install aapt apksigner zipalign dalvik-exchange \
+                     android-framework-res android-sdk-platform-23
+tools/build_apk.sh keystore.p12 STOREPASS ALIAS KhmerUnicodeLayout.apk
+```
+
+`aapt` packages the resources and binary manifest, `dalvik-exchange` (`dx`)
+dexes the classes — so javac must emit Java 8 bytecode — and `zipalign` plus
+`apksigner` produce a v1+v2+v3 signed APK.
+
+**Reuse the same keystore every time.** Android installs an update over an
+existing app only when the signing certificate matches; a different key means
+uninstalling first.
+
+## Patching only the layout into an existing APK
 
 The `.kcm` is a plain resource stored verbatim in the APK's ZIP, so the layout
-alone can be swapped without aapt2 or a resource-table rebuild:
+alone can be swapped with no build tools at all:
 
 ```
-python3 tools/repack_apk.py OldApp.apk unsigned.apk      # swap layout, zipalign
-javac -cp apksig.jar -d . tools/Sign.java                # com.android.tools.build:apksig
-java -cp apksig.jar:. Sign keystore.p12 PASS ALIAS unsigned.apk signed.apk 21
+python3 tools/repack_apk.py OldApp.apk unsigned.apk     # swap layout, zipalign
 ```
 
-`Sign` signs with both v1 and v2 and then verifies the result. On JDK 9+,
-apksig 2.3.0 needs one patch to build (`PKCS7.encodeSignedData` takes a
-`DerOutputStream` now) plus
-`--add-exports java.base/sun.security.{pkcs,x509,util}=ALL-UNNAMED`.
-
-This route only changes the layout. The input method needs a real SDK build,
-because adding a component means editing the binary manifest and resource
-table.
-
-**Re-signing with a different key changes the app's identity**, so Android will
-refuse to install it over an existing copy — uninstall the old one first. Use
-the original signing key if you have it and want in-place updates.
+then sign the result (`tools/Sign.java`, or `apksigner`). This route cannot add
+the input method, so the five sequence keys stay two keystrokes.
